<resources>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="email">E-mail</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="senha">Senha</string>
    <string name="hint_entrar">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="cadastrar">Não tem uma conta? Cadastre-se aqui</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="cadastra_se_com_suas_informa_es_abaixo">Cadastra-se com suas informações abaixo:</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="digite_seu_nome_completo">Digite seu nome completo</string>
    <string name="cpf">CPF</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="xxx_xxx_xxx_xx">XXX.XXX.XXX-XX</string>
    <string name="exemplo_email_com">exemplo@email.com</string>
    <string name="app_name">Finsight</string>
    <string name="UserName">Nome Usuário</string>
    <string name="saldo_em_conta">Saldo em conta</string>
    <string name="ValorSaldo">000000</string>
    <string name="PrevisaoInvest">Previsão do investimento</string>
    <string name="SaldoFut">R$00.00</string>
    <string name="TextApres">Seu assistente financeiro</string>
    <string name="oportunidades">Oportunidades</string>
    <string name="avaliar">Avaliar</string>
    <string name="sugest_es">Sugestões</string>
    <string name="sugestoes">Sugestões</string>
    <string name="dividendo_pago">Dividendo Pago: valor</string>
    <string name="proxima_com">Próxima data COM</string>
    <string name="nome_da_empresa">Nome da Empresa</string>
    <string name="data">Data: Em 5 dias</string>
    <string name="avaliacao_do_papel">Avaliação do papel</string>
    <string name="dashboard">Dashboard</string>
    <string name="oportunidades_investimentos">Oportunidades de Investimento</string>
    <string name="nome_empresa">Nome da Empresa</string>
    <string name="data_com">Data COM: 20/03/2025</string>
    <string name="recomendacao">Recomendação: Vale a pena comprar!</string>"
    <string name="estimativa_de_valoriza">Estimativa de valorização: 10 dias</string>
    <string name="excluir_acao">Tem certeza que deseja excluir essa ação?</string>
    <string name="btn_excluir">Excluir</string>
    <string name="add_acao">Adicionar ação na carteira</string>
    <string name="codigo">Código</string>
    <string name="digite_codigo">Digite o código da ação</string>
    <string name="quantidade">Quantidade</string>
    <string name="digite_quantidade">Digite a quantidade de ações</string>
    <string name="adicionar">Adicionar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nome_da_empresa_2">Nome da Empresa 2</string>
    <string name="data_com_25_03_2025">Data COM: 25/03/2025</string>
    <string name="recomenda_o_n_o_vale_a_pena_comprar">Recomendação: Não vale a pena comprar!</string>
    <string name="atualize_as_oportunidades_regularmente">Atualize as oportunidades regularmente</string>
    <string name="digite_o_c_digo_da_a_o_ex_petr4">Digite o código da ação (ex: PETR4)</string>
    <string name="recomenda_o">Recomendação:</string>
    <string name="hist_rico_da_a_o">Histórico da ação...</string>
    <string name="avaliacao_acao">Avaliação de Ação</string>
    <string name="insira_o_c_digo_de_uma_a_o_para_obter_recomenda_es_e_an_lises_baseadas_em_dados_do_mercado">Insira o código de uma ação para obter recomendações e análises baseadas em dados do mercado.</string>
    <string name="sugest_es_de_investimentos">Sugestões de Investimentos</string>
    <string name="carteira">Carteira</string>
    <string name="hist_rico">Histórico</string>
    <string name="Saldo">R$00.00</string>
    <string name="calendario">Calendario</string>
    <string name="calend_rio">Calendário</string>
    <string name="cone_de_usu_rio">Ícone de usuário</string>
    <string name="sair">Sair</string>
    <string name="sair_do_aplicativo">Sair do aplicativo</string>
    <string name="avaliar_acoes">Avaliar Ações</string>
    <string name="proximas_com">Próximas datas COM</string>

</resources>
