<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_dark"
    android:padding="16dp">

    <TextView
        android:id="@+id/come_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_back"
        app:drawableTint="@color/azul_claro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oportunidades_investimentos"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/darkgray"
            android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_empresa"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_com"
            android:textSize="14sp"
            android:textColor="@color/azul_claro"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recomendacao"
            android:textSize="14sp"
            android:textColor="@color/teal_200"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimativa_de_valoriza"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginTop="4dp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginVertical="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/darkgray"
        android:padding="16dp"
        android:layout_marginBottom="12dp"
        android:elevation="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_da_empresa_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_com_25_03_2025"
        android:textSize="14sp"
        android:textColor="@color/azul_claro"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recomenda_o_n_o_vale_a_pena_comprar"
        android:textSize="14sp"
        android:textColor="#FF0000"
        android:layout_marginTop="4dp" /></LinearLayout>


    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/gray"
    android:layout_marginVertical="8dp" />
    </LinearLayout>
    </ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="12dp"
    android:background="@color/darkgray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualize_as_oportunidades_regularmente"
        android:textSize="14sp"
        android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
