<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/popup_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_acao"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/excluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/baseline_close_24"
            app:drawableTint="@color/azul_claro"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/codigo"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/codigo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borda_azul"
        android:drawablePadding="10dp"
        android:drawableTint="@color/azul_claro"
        android:hint="@string/digite_codigo"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quantidade"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/quantidade"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borda_azul"
        android:drawablePadding="10dp"
        android:drawableTint="@color/azul_claro"
        android:hint="@string/digite_quantidade"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/adicionar"
        android:textColor="@color/white"
        android:backgroundTint="@color/azul_claro"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

</LinearLayout>
