<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dark"
    android:padding="24dp"
    tools:context=".MenuPrincipal">


    <TextView
        android:id="@+id/ic_login"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/borda_azul"
        android:backgroundTint="#333131"
        android:paddingStart="2dp"
        android:paddingTop="7dp"
        android:text="@string/UserName"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_person"
        app:drawableTint="@color/azul_claro"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/borda"
        android:backgroundTint="#333131"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/bg_white_circle"
            android:src="@drawable/settings"
            android:scaleType="centerInside"
            />
        <ImageButton
            android:id="@+id/btn_notifications"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_white_circle"
            android:src="@drawable/notifications"
            android:scaleType="centerInside"
            />

    </LinearLayout>




    <TextView
        android:id="@+id/SaldoText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/saldo_em_conta"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />



    <TextView
        android:id="@+id/Saldo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-30dp"
        android:text="@string/ValorSaldo"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borda_azul"
        android:backgroundTint="#333131"
        android:paddingStart="15dp"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/previsao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrevisaoInvest"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/SaldoFuturo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="00dp"
            android:text="@string/SaldoFut"
            android:textColor="@color/teal_200"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borda_azul"
        android:backgroundTint="#333131"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/AssistenteFinanceiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/TextApres"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Oportunidades"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/oportunidades"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Avaliar"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/avaliar"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Sugestoes"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/sugestoes"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DividendoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:text="@string/dividendo_pago"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/InformacaoDataCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="-130dp"
            android:text="@string/proxima_com"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/NomeEmpesa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome_da_empresa"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="12dp"
            android:text="@string/data"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AvaliacaoPapel"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-6dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/avaliacao_do_papel"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borda"
        android:backgroundTint="#333131"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/icon_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_circle"
            android:layout_marginStart="-10dp"
            android:scaleType="centerInside"
            android:src="@drawable/home"
            app:drawableTint="@color/azul_claro"/>
        <TextView
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="7dp"
            android:text="@string/dashboard"
            android:textSize="15sp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"/>



        <!-- Botão Carteira -->
        <ImageButton
            android:id="@+id/btn_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:background="@drawable/bg_white_circle"
            android:src="@drawable/wallet"
            />


        <!-- Botão Gráfico -->
        <ImageButton
            android:id="@+id/btn_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/graph"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_white_circle"
            />
    </LinearLayout>


</LinearLayout>